[metadata]
name = entry-points-txt
version = attr:entry_points_txt.__version__
description = Read & write entry_points.txt files
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = entry-points-txt@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/entry-points-txt

keywords =
    entry points
    entry_points.txt

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/entry-points-txt
    Bug Tracker = https://github.com/jwodder/entry-points-txt/issues

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = ~=3.6

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_error_summary = True
show_traceback = True
