[metadata]
name = entry-points-txt
version = attr:entry_points_txt.__version__
description = Read & write entry_points.txt files
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = entry-points-txt@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/entry-points-txt

keywords =
    entry points
    entry_points.txt

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/entry-points-txt
    Bug Tracker = https://github.com/jwodder/entry-points-txt/issues

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
